# ghc-slave

./: .gitignore  Makefile  README.md
RPi/: Slave.hs
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: Dummy.c  GHCSlave.c  iostub.c
android/app/src/main/hs/: LineBuff.hs
android/app/src/main/java/com/zw3rk/: GHCSlave.java
android/app/src/main/java/com/zw3rk/ghcslave/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
iOS/GHCSlave/GHCSlave/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
iOS/GHCSlave/GHCSlave.xcodeproj/: project.pbxproj
iOS/GHCSlave/GHCSlave.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/GHCSlave/GHCSlave.xcodeproj/project.xcworkspace/xcuserdata/angerman.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/GHCSlave/GHCSlave.xcodeproj/xcuserdata/angerman.xcuserdatad/xcschemes/: GHCSlave.xcscheme  xcschememanagement.plist
iOS/GHCSlave/GHCSlave/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
